// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`oxfmtrc overrides > Prettier options override - only enabled for specific files 1`] = `
"--------------------
arguments: --check .
working directory: oxfmtrc_overrides/fixtures/prettier_overrides
exit code: 1
--- STDOUT ---------

--- STDERR ---------
node:internal/modules/cjs/loader:1386
  throw err;
  ^

Error: Cannot find module '<cwd>/apps/oxfmt/dist/cli.js'
    at Function._resolveFilename (node:internal/modules/cjs/loader:1383:15)
    at defaultResolveImpl (node:internal/modules/cjs/loader:1025:19)
    at resolveForCJSWithHooks (node:internal/modules/cjs/loader:1030:22)
    at Function._load (node:internal/modules/cjs/loader:1192:37)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_module:36:49 {
  code: 'MODULE_NOT_FOUND',
  requireStack: []
}

Node.js v22.22.1
--------------------"
`;

exports[`oxfmtrc overrides > Tailwind CSS override - different options per file (cache test) 1`] = `
"--------------------
arguments: --check .
working directory: oxfmtrc_overrides/fixtures/tailwindcss_options
exit code: 1
--- STDOUT ---------

--- STDERR ---------
node:internal/modules/cjs/loader:1386
  throw err;
  ^

Error: Cannot find module '<cwd>/apps/oxfmt/dist/cli.js'
    at Function._resolveFilename (node:internal/modules/cjs/loader:1383:15)
    at defaultResolveImpl (node:internal/modules/cjs/loader:1025:19)
    at resolveForCJSWithHooks (node:internal/modules/cjs/loader:1030:22)
    at Function._load (node:internal/modules/cjs/loader:1192:37)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_module:36:49 {
  code: 'MODULE_NOT_FOUND',
  requireStack: []
}

Node.js v22.22.1
--------------------"
`;

exports[`oxfmtrc overrides > basic file pattern override with excludeFiles 1`] = `
"--------------------
arguments: --check .
working directory: oxfmtrc_overrides/fixtures/basic
exit code: 1
--- STDOUT ---------

--- STDERR ---------
node:internal/modules/cjs/loader:1386
  throw err;
  ^

Error: Cannot find module '<cwd>/apps/oxfmt/dist/cli.js'
    at Function._resolveFilename (node:internal/modules/cjs/loader:1383:15)
    at defaultResolveImpl (node:internal/modules/cjs/loader:1025:19)
    at resolveForCJSWithHooks (node:internal/modules/cjs/loader:1030:22)
    at Function._load (node:internal/modules/cjs/loader:1192:37)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_module:36:49 {
  code: 'MODULE_NOT_FOUND',
  requireStack: []
}

Node.js v22.22.1
--------------------"
`;

exports[`oxfmtrc overrides > editorconfig root section applies with oxfmtrc overrides 1`] = `
"--------------------
arguments: --check test.js
working directory: oxfmtrc_overrides/fixtures/editorconfig_root_only
exit code: 1
--- STDOUT ---------

--- STDERR ---------
node:internal/modules/cjs/loader:1386
  throw err;
  ^

Error: Cannot find module '<cwd>/apps/oxfmt/dist/cli.js'
    at Function._resolveFilename (node:internal/modules/cjs/loader:1383:15)
    at defaultResolveImpl (node:internal/modules/cjs/loader:1025:19)
    at resolveForCJSWithHooks (node:internal/modules/cjs/loader:1030:22)
    at Function._load (node:internal/modules/cjs/loader:1192:37)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_module:36:49 {
  code: 'MODULE_NOT_FOUND',
  requireStack: []
}

Node.js v22.22.1
--------------------"
`;

exports[`oxfmtrc overrides > multiple overrides - later overrides take precedence 1`] = `
"--------------------
arguments: --check .
working directory: oxfmtrc_overrides/fixtures/multiple_overrides
exit code: 1
--- STDOUT ---------

--- STDERR ---------
node:internal/modules/cjs/loader:1386
  throw err;
  ^

Error: Cannot find module '<cwd>/apps/oxfmt/dist/cli.js'
    at Function._resolveFilename (node:internal/modules/cjs/loader:1383:15)
    at defaultResolveImpl (node:internal/modules/cjs/loader:1025:19)
    at resolveForCJSWithHooks (node:internal/modules/cjs/loader:1030:22)
    at Function._load (node:internal/modules/cjs/loader:1192:37)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_module:36:49 {
  code: 'MODULE_NOT_FOUND',
  requireStack: []
}

Node.js v22.22.1
--------------------"
`;

exports[`oxfmtrc overrides > override with null disables sortImports 1`] = `
"--------------------
arguments: --check .
working directory: oxfmtrc_overrides/fixtures/sort_imports_null_override
exit code: 1
--- STDOUT ---------

--- STDERR ---------
node:internal/modules/cjs/loader:1386
  throw err;
  ^

Error: Cannot find module '<cwd>/apps/oxfmt/dist/cli.js'
    at Function._resolveFilename (node:internal/modules/cjs/loader:1383:15)
    at defaultResolveImpl (node:internal/modules/cjs/loader:1025:19)
    at resolveForCJSWithHooks (node:internal/modules/cjs/loader:1030:22)
    at Function._load (node:internal/modules/cjs/loader:1192:37)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_module:36:49 {
  code: 'MODULE_NOT_FOUND',
  requireStack: []
}

Node.js v22.22.1
--------------------"
`;

exports[`oxfmtrc overrides > oxfmtrc overrides take precedence over editorconfig 1`] = `
"--------------------
arguments: --check .
working directory: oxfmtrc_overrides/fixtures/priority_over_editorconfig
exit code: 1
--- STDOUT ---------

--- STDERR ---------
node:internal/modules/cjs/loader:1386
  throw err;
  ^

Error: Cannot find module '<cwd>/apps/oxfmt/dist/cli.js'
    at Function._resolveFilename (node:internal/modules/cjs/loader:1383:15)
    at defaultResolveImpl (node:internal/modules/cjs/loader:1025:19)
    at resolveForCJSWithHooks (node:internal/modules/cjs/loader:1030:22)
    at Function._load (node:internal/modules/cjs/loader:1192:37)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_module:36:49 {
  code: 'MODULE_NOT_FOUND',
  requireStack: []
}

Node.js v22.22.1
--------------------"
`;

exports[`oxfmtrc overrides > pattern with slash - matches only specified path 1`] = `
"--------------------
arguments: --check .
working directory: oxfmtrc_overrides/fixtures/path_with_slash
exit code: 1
--- STDOUT ---------

--- STDERR ---------
node:internal/modules/cjs/loader:1386
  throw err;
  ^

Error: Cannot find module '<cwd>/apps/oxfmt/dist/cli.js'
    at Function._resolveFilename (node:internal/modules/cjs/loader:1383:15)
    at defaultResolveImpl (node:internal/modules/cjs/loader:1025:19)
    at resolveForCJSWithHooks (node:internal/modules/cjs/loader:1030:22)
    at Function._load (node:internal/modules/cjs/loader:1192:37)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_module:36:49 {
  code: 'MODULE_NOT_FOUND',
  requireStack: []
}

Node.js v22.22.1
--------------------"
`;
